# fly-around-bullet-physics-bgfx-wasm-template-starting-point

./: CMakeLists.txt  LICENSE.txt  README.md  bgfx2doverlaytext_dynamicallysized.cpp  bgfx2doverlaytext_dynamicallysized.h  bgfx2doverlaytext_staticallysized.cpp  bgfx2doverlaytext_staticallysized.h  fs_skybox.sc  index.html  lolreadfile.cpp  lolreadfile.h  main.cpp  my_bgfx_view_id_constants.h  skybox.cpp  skybox.h  varying.skybox.def.sc  vs_overlay.sc  vs_skybox.sc
